# OpenGL-Adventures

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.bak  shape.mtl
.github/workflows/: cmake.yml
src/: controls.cpp  main.cpp  objloader.cpp  shader.cpp  texture.cpp  window.cpp
src/cpp/: VBOindexer.cpp  controls.cpp  main.cpp  objloader.cpp  shader.cpp  text2D.cpp  texture.cpp  window.cpp
src/include/: AnEngineConfig.h.in  AnEngineConfig.hpp  VBOindexer.hpp  common.hpp  controls.hpp  objloader.hpp  shader.hpp  text2D.hpp  texture.hpp  window.hpp
src/shaders/: Fshader1.frag  Text2D.frag  Text2D.vert  Vshader1.vert
